# PRISM-AI

./: .gitignore  README.md  app.py  forms.py  pyproject.toml  readme.txt  render.yaml  requirements.txt
.github/workflows/: tests.yml
New folder/: app.py
templates/: add_patient.html  approve_physios.html  chronic_disease.html  clinical_flags.html  edit_patient.html  first_follow_up.html  follow_up_new.html  initial_plan.html  login.html  login_institute.html  manage_users.html  objective_assessment.html  patho_mechanism.html  patient_report.html  perspectives.html  provisional_diagnosis.html  register.html  register_institute.html  register_with_institute.html  smart_goals.html  subjective.html  treatment_plan.html  view_follow_ups.html  view_patients.html
tests/: test_routes.py
