[project]
name = "physiologic-prism"
version = "0.1.0"
description = "Clinical reasoning app for physiotherapists to manage patients and track progress."
authors = ["Sandeep Rao <sandy_28783@rediffmail.com>"]
requires-python = ">=3.12"
dependencies = [
    "flask==2.2.5",
    "Werkzeug>=2.2,<2.4",
    "xhtml2pdf>=0.2.17",
    "weasyprint==59.0",
    "pydyf==0.8.0",
    "cffi>=1.15.1",
    "cairocffi>=1.4.0",
    "gunicorn==23.0.0",
    "firebase-admin==6.9.0",
    "anthropic==0.57.1",
    "Flask-WTF==1.2.2",
]
